--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.0.2"
 core-splashscreen = "1.0.1"
 kotlinx-coroutines-android = "1.7.1"
+material = "1.4.3"
 org-jetbrains-kotlin-android = "1.8.22"
 core-ktx = "1.10.1"
 ksp = "1.8.22-1.0.11"
