--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,8 @@ agp = "8.1.0"
 app-update = "2.1.0"
 core-splashscreen = "1.0.1"
 datastore-preferences = "1.0.0"
+hilt-compiler = "1.0.0"
+hilt-work = "1.0.0"
 kotlinx-coroutines-android = "1.7.1"
 lottie-compose = "6.1.0"
 material = "1.4.3"
@@ -18,10 +20,14 @@ compose-bom = "2023.06.01"
 orbit-compose = "0.31.0"
 compose-navigation = "2.6.0"
 hilt = "2.46.1"
+work-runtime-ktx = "2.8.1"
 
 [libraries]
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "core-splashscreen" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore-preferences" }
+androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hilt-compiler" }
+androidx-hilt-work = { module = "androidx.hilt:hilt-work", version.ref = "hilt-work" }
+androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "work-runtime-ktx" }
 app-update = { module = "com.google.android.play:app-update", version.ref = "app-update" }
 app-update-ktx = { module = "com.google.android.play:app-update-ktx", version.ref = "app-update" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
