--- a/.github/workflows/deploy_on_playstore.yml
+++ b/.github/workflows/deploy_on_playstore.yml
@@ -1,108 +1,60 @@
-#name: Deploy
-#on:
-#  push:
-#    branches: [ main ]
-#
-#jobs:
-#  test:
-#    name: Run tests
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v3
-#
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: 'adopt'
-#          java-version: 17
-#          cache: 'gradle'
-#
-#      - name: Grand execute permissions to gradlew
-#        run: chmod +x gradlew
-#
-#      - name: Configure keystore before run tests
-#        env:
-#          ANDROID_KEYSTORE_FILE: ${{ secrets.KEYSTORE }}
-#          KEYSTORE_STORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-#          KEYSTORE_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-#          KEYSTORE_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-#        run: |
-#          echo "$ANDROID_KEYSTORE_FILE" > keystore.jks.b64
-#          base64 -d -i keystore.jks.b64 > app/keystore.jks
-#          echo "storeFile=keystore.jks" >> key.properties
-#          echo "keyAlias=$KEYSTORE_KEY_ALIAS" >> key.properties
-#          echo "storePassword=$KEYSTORE_STORE_PASSWORD" >> key.properties
-#          echo "keyPassword=$KEYSTORE_KEY_PASSWORD" >> key.properties
-#
-#      - name: Decode google-services.json
-#        env:
-#          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICE_JSON }}
-#        run: echo $GOOGLE_SERVICES_JSON > app/google-services.json
-#
-#      - name: Run unit tests
-#        run: ./gradlew testDebug
-#
-#  deploy:
-#    name: Distribute App
-#    needs: test
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v3
-#
-#      - name: Set Up JDK 17
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: 'adopt'
-#          java-version: 17
-#          cache: 'gradle'
-#
-#      - name: Version Bump
-#        uses: chkfung/android-version-actions@v1.2.1
-#        with:
-#          gradlePath: app/build.gradle.kts
-#          versionCode: ${{ github.run_number }}
-#
-#      - name: Configure keystore before bundleRelease
-#        env:
-#          ANDROID_KEYSTORE_FILE: ${{ secrets.KEYSTORE }}
-#          KEYSTORE_STORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-#          KEYSTORE_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-#          KEYSTORE_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-#        run: |
-#          echo "$ANDROID_KEYSTORE_FILE" > keystore.jks.b64
-#          base64 -d -i keystore.jks.b64 > app/keystore.jks
-#          echo "storeFile=keystore.jks" >> key.properties
-#          echo "keyAlias=$KEYSTORE_KEY_ALIAS" >> key.properties
-#          echo "storePassword=$KEYSTORE_STORE_PASSWORD" >> key.properties
-#          echo "keyPassword=$KEYSTORE_KEY_PASSWORD" >> key.properties
-#
-#      - name: Decode google-services.json
-#        env:
-#          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICE_JSON }}
-#        run: echo $GOOGLE_SERVICES_JSON > app/google-services.json
-#
-#      - name: Assemble Release Bundle
-#        run: ./gradlew bundleRelease
-#
-#      - name: Sign Release
-#        uses: r0adkll/sign-android-release@v1
-#        with:
-#          releaseDirectory: app/build/outputs/bundle/release
-#          signingKeyBase64: ${{ secrets.KEYSTORE }}
-#          keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
-#          alias: ${{ secrets.KEY_ALIAS }}
-#          keyPassword: ${{ secrets.KEY_PASSWORD }}
-#
-#      - name: Setup Authorization With Google Play Store
-#        run: echo '${{ secrets.GOOGLE_PLAY_API_AUTH }}' > service_account.json
-#
-#      - name: Deploy to Internal Channel
-#        uses: r0adkll/upload-google-play@v1.0.19
-#        with:
-#          serviceAccountJson: service_account.json
-#          packageName: com.yveskalume.eventcademy
-#          releaseFiles: app/build/outputs/bundle/release/app-release.aab
-#          inAppUpdatePriority: 5
-#          track: internal
-#          status: 'completed'
-#          whatsNewDirectory: whatsnew/
+name: Deploy on playstore
+on:
+  push:
+    branches: [ main ]
+
+jobs:
+  # use fastlane to deploy the App
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.0
+
+      - name: Setup jdk-17
+        uses: actions/setup-java@main
+        with:
+          java-version: 17
+          distribution: 'adopt'
+
+      - name: Install Fastlane
+        run: |
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
+
+      # google-services.json is from the firebase console
+      - name: Decode google-services.json
+        env:
+          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICE_JSON }}
+        run: echo $GOOGLE_SERVICES_JSON > app/google-services.json
+
+      - name: Run Unit tests
+        run: bundle exec fastlane test
+
+      # the Keystore is the Play App Signing Key
+      - name: Configure Keystore
+        env:
+          ANDROID_KEYSTORE_FILE: ${{ secrets.KEYSTORE }}
+          KEYSTORE_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEYSTORE_KEY_PASSWORD: ${{ secrets.PLAY_STORE_KEY_PATH_PASSWORD }}
+          KEYSTORE_STORE_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+        run: |
+          echo "$ANDROID_KEYSTORE_FILE" > keystore.jks.b64
+          base64 -d -i keystore.jks.b64 > app/keystore.jks
+          echo "storeFile=keystore.jks" >> key.properties
+          echo "keyAlias=$KEYSTORE_KEY_ALIAS" >> key.properties
+          echo "storePassword=$KEYSTORE_STORE_PASSWORD" >> key.properties
+          echo "keyPassword=$KEYSTORE_KEY_PASSWORD" >> key.properties
+
+      # play_config.json is from the Google play console, it helps to deploy the app from the CI
+      - name: Create Google Play Config file
+        env:
+          PLAY_CONFIG_JSON: ${{ secrets.GOOGLE_PLAY_API_AUTH }}
+        run: |
+          echo "$PLAY_CONFIG_JSON" > play_config.json
+
+      - name: Deploy the app to Beta track 🚀
+        run: bundle exec fastlane beta
