(CI) : setup fastlane

--- a/.github/workflows/deploy_on_playstore.yml
+++ b/.github/workflows/deploy_on_playstore.yml
@@ -31,9 +31,6 @@ jobs:
           GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICE_JSON }}
         run: echo $GOOGLE_SERVICES_JSON > app/google-services.json
 
-      - name: Run Unit tests
-        run: bundle exec fastlane test
-
       # the Keystore is the Play App Signing Key
       - name: Configure Keystore
         env:
@@ -55,6 +52,10 @@ jobs:
           PLAY_CONFIG_JSON: ${{ secrets.GOOGLE_PLAY_API_AUTH }}
         run: |
           echo "$PLAY_CONFIG_JSON" > play_config.json
+
+      # Run Unit tests
+      - name: Run Unit tests
+        run: bundle exec fastlane test
 
       - name: Deploy the app to Beta track 🚀
         run: bundle exec fastlane beta
