(CI) : comment version lane, will fix it later

--- a/.github/workflows/deploy_on_playstore.yml
+++ b/.github/workflows/deploy_on_playstore.yml
@@ -58,8 +58,8 @@ jobs:
         run: bundle exec fastlane test
 
       # Increment the version
-      - name: Increment the version
-        run: bundle exec fastlane version
+#      - name: Increment the version
+#        run: bundle exec fastlane version
 
       - name: Deploy the app to Internal track 🚀
         run: bundle exec fastlane internal
