--- a/.github/workflows/deploy_on_playstore.yml
+++ b/.github/workflows/deploy_on_playstore.yml
@@ -39,8 +39,7 @@ jobs:
           KEYSTORE_KEY_PASSWORD: ${{ secrets.PLAY_STORE_KEY_PATH_PASSWORD }}
           KEYSTORE_STORE_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: |
-          echo "$ANDROID_KEYSTORE_FILE" > keystore.jks.b64
-          base64 -d -i keystore.jks.b64 > app/keystore.jks
+          echo "$ANDROID_KEYSTORE_FILE" | base64 -d > app/keystore.jks
           echo "storeFile=keystore.jks" >> key.properties
           echo "keyAlias=$KEYSTORE_KEY_ALIAS" >> key.properties
           echo "storePassword=$KEYSTORE_STORE_PASSWORD" >> key.properties
