--- a/.github/workflows/deploy_on_playstore.yml
+++ b/.github/workflows/deploy_on_playstore.yml
@@ -9,11 +9,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.0
+
       - name: Setup jdk-17
         uses: actions/setup-java@main
         with:
           java-version: 17
           distribution: 'adopt'
+
+      - name: Install Fastlane
+        run: |
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
 
       - name: Bump version
         uses: chkfung/android-version-actions@v1.1
