--- a/.github/workflows/deploy_on_playstore.yml
+++ b/.github/workflows/deploy_on_playstore.yml
@@ -9,21 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 3.0
 
       - name: Setup jdk-17
         uses: actions/setup-java@main
         with:
           java-version: 17
           distribution: 'adopt'
-
-      - name: Install Fastlane
-        run: |
-          bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 3
 
       - name: Bump version
         uses: chkfung/android-version-actions@v1.1
@@ -40,7 +31,7 @@ jobs:
 
       # Run Unit tests
       - name: Run Unit tests
-        run: bundle exec fastlane test
+        run: ./gradlew test
 
       - name: Assemble Release Bundle
         run: ./gradlew bundleRelease
