--- a/.github/workflows/deploy_on_playstore.yml
+++ b/.github/workflows/deploy_on_playstore.yml
@@ -29,6 +29,17 @@ jobs:
           GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICE_JSON }}
         run: echo $GOOGLE_SERVICES_JSON > app/google-services.json
 
+      - name: Create key.properties
+        env:
+          KEYSTORE_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEYSTORE_KEY_PASSWORD: ${{ secrets.PLAY_STORE_KEY_PATH_PASSWORD }}
+          KEYSTORE_STORE_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+        run: |
+          echo "storeFile=keystore.jks" >> key.properties
+          echo "keyAlias=$KEYSTORE_KEY_ALIAS" >> key.properties
+          echo "storePassword=$KEYSTORE_STORE_PASSWORD" >> key.properties
+          echo "keyPassword=$KEYSTORE_KEY_PASSWORD" >> key.properties
+
       # Run Unit tests
       - name: Run Unit tests
         run: ./gradlew test
