--- a/.github/workflows/deploy_on_playstore.yml
+++ b/.github/workflows/deploy_on_playstore.yml
@@ -9,6 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.0
 
       - name: Setup jdk-17
         uses: actions/setup-java@main
@@ -16,12 +20,11 @@ jobs:
           java-version: 17
           distribution: 'adopt'
 
-      - name: Bump version
-        uses: chkfung/android-version-actions@v1.1
-        with:
-          gradlePath: app/build.gradle.kts
-          versionCode: ${{github.run_number}}
-          versionName: 1.4
+      - name: Install Fastlane
+        run: |
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
+      
 
       # google-services.json is from the firebase console
       - name: Decode google-services.json
@@ -42,29 +45,14 @@ jobs:
           echo "storePassword=$KEYSTORE_STORE_PASSWORD" >> key.properties
           echo "keyPassword=$KEYSTORE_KEY_PASSWORD" >> key.properties
 
-      # Run Unit tests
+      - name: Create Google Play Config file
+        env:
+          PLAY_CONFIG_JSON: ${{ secrets.GOOGLE_PLAY_API_AUTH }}
+        run: |
+          echo "$PLAY_CONFIG_JSON" > play_config.json
+
       - name: Run Unit tests
-        run: ./gradlew test
+        run: bundle exec fastlane test
 
-      - name: Assemble Release Bundle
-        run: ./gradlew bundleRelease
-
-      - name: Sign Release
-        uses: r0adkll/sign-android-release@v1
-        with:
-          releaseDirectory: app/build/outputs/bundle/release
-          signingKeyBase64: ${{ secrets.KEYSTORE }}
-          alias: ${{ secrets.KEY_ALIAS }}
-          keyStorePassword: ${{ secrets.PLAY_STORE_KEY_PATH_PASSWORD }}
-          keyPassword: ${{ secrets.KEY_PASSWORD }}
-
-      - name: Deploy to Production
-        uses: r0adkll/upload-google-play@v1.1.1
-        with:
-          serviceAccountJsonPlainText: ${{ secrets.GOOGLE_PLAY_API_AUTH }}
-          packageName: com.yveskalume.eventcademy
-          releaseFiles: app/build/outputs/bundle/release/app-release.aab
-          track: beta
-          inAppUpdatePriority: 5
-          whatsNewDirectory: whatsnew/
-          status: completed
+      - name: Deploy the app to Internal track 🚀
+        run: bundle exec fastlane internal
