--- a/.github/workflows/deploy_on_playstore.yml
+++ b/.github/workflows/deploy_on_playstore.yml
@@ -1,7 +1,8 @@
 name: Deploy on playstore
 on:
-  push:
-    branches: [ main ]
+  release:
+    types:
+      - published
 
 jobs:
   # use fastlane to deploy the App
