--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,8 +4,8 @@ compose-compiler = "1.5.3"
 app-update = "2.1.0"
 core-splashscreen = "1.0.1"
 datastore-preferences = "1.0.0"
-hilt-compiler = "1.0.0"
-hilt-work = "1.0.0"
+hilt-compiler = "1.1.0"
+hilt-work = "1.1.0"
 kotlinx-coroutines-android = "1.7.3"
 kotlinx-serialization-json = "1.5.1"
 lottie-compose = "6.1.0"
@@ -18,16 +18,16 @@ androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.6.2"
 activity-compose = "1.8.0"
-compose-bom = "2023.10.00"
+compose-bom = "2023.10.01"
 orbit-compose = "0.31.0"
-compose-navigation = "2.7.4"
-hilt = "2.47"
+compose-navigation = "2.7.5"
+hilt = "2.48.1"
 work-runtime-ktx = "2.8.1"
 appcompat = "1.6.1"
 com-google-android-material-material = "1.10.0"
 androidx-benchmark = "1.1.1"
 runner = "1.5.2"
-benchmark-junit4 = "1.1.1"
+benchmark-junit4 = "1.2.0"
 
 [libraries]
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "core-splashscreen" }
@@ -49,7 +49,7 @@ lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-ru
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie-compose" }
-material-icon-exented = "androidx.compose.material:material-icons-extended:1.5.3"
+material-icon-exented = "androidx.compose.material:material-icons-extended:1.5.4"
 ui = { group = "androidx.compose.ui", name = "ui" }
 ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
@@ -62,9 +62,9 @@ navigation-compose = { group = "androidx.navigation", name = "navigation-compose
 
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
-hilt-navigation = "androidx.hilt:hilt-navigation-compose:1.0.0"
+hilt-navigation = "androidx.hilt:hilt-navigation-compose:1.1.0"
 
-firebase-boom = { group = "com.google.firebase", name = "firebase-bom", version = "32.3.1" }
+firebase-boom = { group = "com.google.firebase", name = "firebase-bom", version = "32.5.0" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore-ktx" }
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth-ktx" }
 firebase-storage = { group = "com.google.firebase", name = "firebase-storage-ktx" }
@@ -80,6 +80,8 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "com-google-android-material-material" }
 runner = { group = "androidx.test", name = "runner", version.ref = "runner" }
 benchmark-junit4 = { group = "androidx.benchmark", name = "benchmark-junit4", version.ref = "benchmark-junit4" }
+
+konfetti-compose = "nl.dionsegijn:konfetti-compose:2.0.3"
 
 
 [plugins]
