--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,35 +1,34 @@
 [versions]
-agp = "8.1.2"
-compose-compiler = "1.5.3"
+agp = "8.1.4"
 app-update = "2.1.0"
 core-splashscreen = "1.0.1"
-datastore-preferences = "1.0.0"
-hilt-compiler = "1.1.0"
-hilt-work = "1.1.0"
-kotlinx-coroutines-android = "1.7.3"
-kotlinx-serialization-json = "1.5.1"
+datastore-preferences = "1.1.1"
+hilt-compiler = "1.2.0"
+hilt-work = "1.2.0"
+kotlinx-coroutines-android = "1.8.1"
+kotlinx-serialization-json = "1.6.3"
 lottie-compose = "6.1.0"
 material = "1.4.3"
-org-jetbrains-kotlin-android = "1.9.10"
-core-ktx = "1.12.0"
-ksp = "1.9.10-1.0.13"
+kotlin = "2.0.0"
+core-ktx = "1.13.1"
+ksp = "2.0.0-1.0.21"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
-lifecycle-runtime-ktx = "2.6.2"
-activity-compose = "1.8.0"
-compose-bom = "2023.10.01"
+lifecycle-runtime-ktx = "2.8.2"
+activity-compose = "1.9.0"
+compose-bom = "2024.06.00"
 orbit-compose = "0.31.0"
-compose-navigation = "2.7.5"
-hilt = "2.48.1"
-work-runtime-ktx = "2.8.1"
-appcompat = "1.6.1"
-com-google-android-material-material = "1.10.0"
-androidx-benchmark = "1.1.1"
+compose-navigation = "2.7.7"
+hilt = "2.49"
+work-runtime-ktx = "2.9.0"
+appcompat = "1.7.0"
+com-google-android-material-material = "1.12.0"
+androidx-benchmark = "1.2.4"
 runner = "1.5.2"
-benchmark-junit4 = "1.2.0"
-uiautomator = "2.2.0"
-benchmark-macro-junit4 = "1.2.0-beta01"
+benchmark-junit4 = "1.2.4"
+uiautomator = "2.3.0"
+benchmark-macro-junit4 = "1.2.4"
 
 [libraries]
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "core-splashscreen" }
@@ -51,22 +50,22 @@ lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-ru
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie-compose" }
-material-icon-exented = "androidx.compose.material:material-icons-extended:1.5.4"
+material-icon-exented = "androidx.compose.material:material-icons-extended:1.6.8"
 ui = { group = "androidx.compose.ui", name = "ui" }
 ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test", version.ref = "org-jetbrains-kotlin-android" }
+kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test", version.ref = "kotlin" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "compose-navigation" }
 
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
-hilt-navigation = "androidx.hilt:hilt-navigation-compose:1.1.0"
+hilt-navigation = "androidx.hilt:hilt-navigation-compose:1.2.0"
 
-firebase-boom = { group = "com.google.firebase", name = "firebase-bom", version = "32.5.0" }
+firebase-boom = { group = "com.google.firebase", name = "firebase-bom", version = "33.1.0" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore-ktx" }
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth-ktx" }
 firebase-storage = { group = "com.google.firebase", name = "firebase-storage-ktx" }
@@ -75,9 +74,9 @@ firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging
 firebase-remoteconfig = { group = "com.google.firebase", name = "firebase-config-ktx" }
 firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics-ktx" }
 
-google-playservices-auth = { group = "com.google.android.gms", name = "play-services-auth", version = "20.7.0" }
+google-playservices-auth = { group = "com.google.android.gms", name = "play-services-auth", version = "21.2.0" }
 
-coil-compose = { group = "io.coil-kt", name = "coil-compose", version = "2.4.0" }
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version = "2.6.0" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "com-google-android-material-material" }
 runner = { group = "androidx.test", name = "runner", version.ref = "runner" }
@@ -90,15 +89,16 @@ benchmark-macro-junit4 = { group = "androidx.benchmark", name = "benchmark-macro
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "agp" }
-org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
+org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 com-google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 com-google-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
-com-google-gms-google-services = { id = "com.google.gms.google-services", version = "4.3.15" }
-com-google-firebase-crashlytics = { id = "com.google.firebase.crashlytics", version = "2.9.7" }
-org-jetbrains-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version = "1.7.10" }
+com-google-gms-google-services = { id = "com.google.gms.google-services", version = "4.4.2" }
+com-google-firebase-crashlytics = { id = "com.google.firebase.crashlytics", version = "3.0.1" }
+org-jetbrains-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version = "2.0.0" }
 com-android-library = { id = "com.android.library", version.ref = "agp" }
 androidx-benchmark = { id = "androidx.benchmark", version.ref = "androidx-benchmark" }
 androidTest = { id = "com.android.test", version.ref = "agp" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 [bundles]
 
